# Thesis

./: CMakeLists.txt  MovementRecognition.py  hand_tracking_desktop_live.pbtxt  motion.cpp
